--- a/cart.html
+++ b/cart.html
@@ -19,7 +19,7 @@
     <header>
         <div class="custom-nav-container d-flex align-items-center justify-content-between py-3 px-2 shadow-sm">
             <a class="text-clipped navbar-brand" href="./index.html">
-                <i class="fas fa-meteor d-flex">
+                <i class="fab fa-empire d-flex">
                     <span class="m-auto">Tezga Shop</span>
                 </i>
             </a>
